--- a/papers/pfds2020/chapter05.tex
+++ b/papers/pfds2020/chapter05.tex
@@ -295,7 +295,7 @@ $$
 Интерфейс:
 \begin{itemize}
 \item \mlinline{empty: queue -> bool}
-\item \mintinline[escapeinside=||]{ocaml}{enqueue|$\times$|int -> queue}\\
+\item \mlinline{enqueue|$\times$|int -> queue}\\
 добавление в очередь
 \item \mlinline{head: queue -> int}\\
 посмотреть на головной элемент
