--- a/papers/pfds2020/06trees.tex
+++ b/papers/pfds2020/06trees.tex
@@ -55,7 +55,7 @@
 \end{itemize}
 \vspace{1em}
 
-Функция \mintinline[escapeinside=||]{ocaml}{insert: tree|$\times$|int -> tree} вставки значения $x$ в дерево:
+Функция \mlinline{insert: tree|$\times$|int -> tree} вставки значения $x$ в дерево:
 \begin{itemize}
 \item Вставка в пустое дерево тривиальна
 \item Иначе наше дерево -- это узел из значения $y$ и двух других поддеревьев \mlinline{l} и \mlinline{r}
@@ -66,7 +66,7 @@
 \end{itemize}
 \end{itemize}
 \vspace{2em}
-Функция \mintinline[escapeinside=||]{ocaml}{member: tree|$\times$|int -> bool} пишется аналогично
+Функция \mlinline{member: tree|$\times$|int -> bool} пишется аналогично
 \end{frame}
 
 %
@@ -140,8 +140,8 @@
 %\end{itemize}
 %\vspace{1em}
 
-Функция \mintinline[escapeinside=||]{ocaml}{insert: tree|$\times$|int -> tree} вставки значения $x$ в дерево реализуется с помощью функции 
-\mintinline[escapeinside=||]{ocaml}{balance}:
+Функция \mlinline{insert: tree|$\times$|int -> tree} вставки значения $x$ в дерево реализуется с помощью функции 
+\mlinline{balance}:
 \begin{itemize}
 \item Вставка в пустое дерево тривиальна
 \item Иначе вставляем в  дерево, которое состоит из: значения $y$, цвета $c$ и двух других поддеревьев \mlinline{l} и \mlinline{r}
@@ -152,7 +152,7 @@
 \end{itemize}
 \end{itemize}
 \vspace{2em}
-Функция \mintinline[escapeinside=||]{ocaml}{balance: color|$\times$|tree|$\times$|int|$\times$|tree -> tree} конструирует узел дерева, переупорядочивая, если нужно
+Функция \mlinline{balance: color|$\times$|tree|$\times$|int|$\times$|tree -> tree} конструирует узел дерева, переупорядочивая, если нужно
 \end{frame}
 
 %\defverbatim[colored]{\balance}{
