--- a/papers/pfds2020/chapter05.tex
+++ b/papers/pfds2020/chapter05.tex
@@ -290,12 +290,12 @@ $$
 \subsection{Чисто функциональные очереди и их амортизация}
 
 
-\begin{frame}{Чисто функциональные очереди}
+\begin{frame}[fragile]{Чисто функциональные очереди}
 \begin{minipage}{.4\textwidth}
 Интерфейс:
 \begin{itemize}
 \item \mlinline{empty: queue -> bool}
-\item \mlinline{enqueue|$\times$|int -> queue}\\
+\item \mlinline{enqueue*int -> queue}\\
 добавление в очередь
 \item \mlinline{head: queue -> int}\\
 посмотреть на головной элемент
@@ -305,16 +305,16 @@ $$
 \end{minipage}
 \begin{minipage}{.55\textwidth}
   Самая распространенная чисто функциональная реализация очередей
-  представляет собой пару списков, \hsinline{f} и \hsinline{r}, 
+  представляет собой пару списков, \mlinline{f} и \mlinline{r}, 
   \begin{itemize}
-  \item \hsinline{f} (front) содержит головные элементы очереди в правильном порядке,
-  \item \hsinline{r} (reversed) состоит из хвостовых элементов в обратном порядке
+  \item \mlinline{f} (front) содержит головные элементы очереди в правильном порядке,
+  \item \mlinline{r} (reversed) состоит из хвостовых элементов в обратном порядке
   \end{itemize}
   \vspace{1em}
   
-  Например, очередь, содержащая целые числа \hsinline{f=[1,2,3,4,5,6]}, может быть
-  представлена списками \hsinline{f=[1,2,3]} и
-  \hsinline{r=[6,5,4]}.
+  Например, очередь, содержащая целые числа \mlinline{f=[1,2,3,4,5,6]}, может быть
+  представлена списками \mlinline{f=[1,2,3]} и
+  \mlinline{r=[6,5,4]}.
 \end{minipage}
 \end{frame}
 
@@ -424,7 +424,7 @@ $O(1)$, но \mlinline{tail} в худшем случае отнимает $O(n)
 
 \begin{frame}{Вывод}
 
-У чисто функциональной очереди функция \hsinline{tail} за $O(n)$ в худшем случае и за $O(1)$ амортизированного.\\
+У чисто функциональной очереди функция \mlinline{tail} за $O(n)$ в худшем случае и за $O(1)$ амортизированного.\\
 
 \begin{hint}
   Эта реализация очередей идеальна в приложениях, где не требуется
